CFTemplates/AppStream20Demo.template
AWSTemplateFormatVersion: 2010-09-09
AWSTemplateFormatVersion: 2010-09-09
Resources:
  AppStreamDemoVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags: 
        - 
          Key: Name
          Value: AppStream20 VPC
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref AppStreamDemoVPC
      AvailabilityZone: !Join [ "", [ !Ref "AWS::Region", "a"] ]
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags: 
        - 
          Key: Name
          Value: AppStream2 Public Subnet
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref AppStreamDemoVPC
      AvailabilityZone: !Join [ "", [ !Ref "AWS::Region", "a"] ]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: false
      Tags: 
        - 
          Key: Name
          Value: AppStream2 Private Subnet1
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref AppStreamDemoVPC
      AvailabilityZone: !Join [ "", [ !Ref "AWS::Region", "b"] ]
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags: 
        - 
          Key: Name
          Value: AppStream2 Private Subnet2
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Network
          Value: Public
  GatewayToInternet:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref AppStreamDemoVPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref AppStreamDemoVPC
      Tags:
        - Key: Network
          Value: Public
        - Key: Name
          Value: AppStream2 Public Route Table
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  NatGateway:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: NatPublicIP
    Properties:
      AllocationId: !GetAtt NatPublicIP.AllocationId
      SubnetId: !Ref PublicSubnet1
  NatPublicIP:
    Type: 'AWS::EC2::EIP'
    DependsOn: AppStreamDemoVPC
    Properties:
      Domain: vpc
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref AppStreamDemoVPC
      Tags:
        - Key: Network
          Value: Private
        - Key: Name
          Value: AppStream2 Private Route Table
  PrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable
